Fix dark mode forced (Maybe) (Last time)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,8 @@
 */
 
 :root {
+  color-scheme: only light;
+
   --background: #ffffff;
   --foreground: #171717;
 }
